# OpenETL

./: .coderabbit.yaml  .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  README.md  SECURITY.md  airflow.cfg  airflow_create_user.txt  docker-compose.yml  home.py  local.env  main.py  pyproject.toml  requirements.txt  requirements_backend.txt  requirements_frontend.txt
.github/workflows/: docker-publish.yaml  download_and_sync_repo.yml  publish.yml  sync.yml
.streamlit/: config.toml
api/: create_api.py  fetch_data.py
api_templates/: hubspot.json
backend/: connector.py  database.py  dockerfile  main.py  pipeline.py  requirements.txt  requirements_backend.txt
backend/app/: connector.py  database.py  oauth.py  pipeline.py  scheduler.py  worker.py
backend/app/connectors/database/: postgresql.py
backend/app/middlewares/: exception_handler.py  logging.py  response_status.py
backend/app/models/: airflow_model.py  main.py
backend/models/: airflow_model.py  database_models.py
connection/: connection.py  create_connection.py
connectors/: hubspot.py
connectors/api/: freshdesk.py  gsheet.py  hubspot.py  odoo.py  salesforce.py
connectors/database/: mariadb.py  mysql.py  postgresql.py  snowflake.py  sqlserver.py
connectors/storage/: s3.py
console/: console.py
css/: style.css
docs/: .buildinfo  CNAME  Makefile  conf.py  genindex.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/modules/: connector_utils.rst.txt  main_db_class.rst.txt
docs/modules/: api_utils.html  celery_utils.html  database_utils.html  enums.html  form_utils.html  generic_utils.html  local_connection_utils.html  main.html  main_api_class.html  main_db_class.html  modules.html  pipeline_utils.html  pipeline_utils.rst  scheduler_utils.html  scheduler_utils.rst  spark_utils.html
docs/tables/: app.html  modules.html
frontend/: dockerfile  home.py
frontend/app/: next.config.js  package.json
frontend/app/logs/: page.tsx
frontend/app/pipeline/: create_pipelines.py  pipelines.py
frontend/app/src/app/: layoutMetadata.ts  page.tsx
frontend/app/src/components/: CardConnection.tsx  CardDataStats.tsx
frontend/app/src/hooks/: useLocalStorage.tsx
frontend/app/src/types/: connection.ts  connectors.ts  integration.ts  store_connections.ts  test_connection.ts
frontend/app/src/utils/: api.ts  func.ts
frontend/connection/: connection.py  create_connection.py
frontend/frontend_deprecated/: home.py  main.py  requirements_frontend.txt
frontend/frontend_deprecated/app/connection/: connection.py  create_connection.py
frontend/frontend_deprecated/app/pipeline/: create_pipelines.py  pipelines.py
frontend/frontend_deprecated/app/query_editor/: query.py
frontend/pipeline/: create_pipelines.py
frontend/v1/src/types/: auth_params.ts  connectors.ts  integration.ts  tasks.ts
frontend/v1/src/utils/: api.ts  contants.ts
frontend/v2/: eslint.config.mjs  package-lock.json  package.json
frontend/v2/app/: layout.tsx  page.tsx
frontend/v2/app/celery/: page.tsx
frontend/v2/app/connections/: page.tsx
frontend/v2/app/logs/: page.tsx
frontend/v2/app/pipelines/: page.tsx
frontend/v2/app/scheduler/: page.tsx
frontend/v2/app/settings/: page.tsx
frontend/v2/components/: CronCard.tsx  DigitalClock.tsx  app-sidebar.tsx  chart-area.tsx  login-form.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  section-cards.tsx  site-header.tsx
frontend/v2/components/Connections/: Cards.tsx  Create.tsx  EditConnection.tsx
frontend/v2/components/Dashboard/: DashTable.tsx  Home.tsx
frontend/v2/components/DynamicForm/: EditConnection.tsx  EditIntegration.tsx
frontend/v2/components/Layouts/: DefaultLayout.tsx
frontend/v2/components/Loader/: index.tsx
frontend/v2/components/LogPanel/: index.tsx
frontend/v2/components/SelectableDates/: index.tsx
frontend/v2/components/Spinner/: index.tsx
frontend/v2/components/pipelines/: finish.tsx  source.tsx  spark.tsx
frontend_deprecated/: dockerfile  home.py  main.py
frontend_deprecated/app/connection/: create_connection.py
frontend_deprecated/app/pipeline/: pipelines.py
frontend_deprecated/app/query_editor/: query.py
openetl_utils/: __init__.py  cache.py  celery_utils.py  connector_utils.py  database_utils.py  encrypted_fields.py  enums.py  local_connection_utils.py  logger.py  main_api_class.py  main_db_class.py  main_storage_class.py  pipeline_utils.py  scheduler_utils.py  spark_utils.py
openetl_utils/__migrations__/: app.py  batch.py  scheduler.py
openetl_utils/deprecated/: api_utils.py  form_utils.py  generic_utils.py  jdbc_engine_utils.py
pipeline/: create_pipelines.py  pipelines.py
query_editor/: query.py
sphinx/: conf.py  index.rst
sphinx/_build/html/: index.html  objects.inv  searchindex.js
sphinx/modules/: api_utils.rst  celery_utils.rst  form_utils.rst  generic_utils.rst  local_connection_utils.rst  main_api_class.rst  spark_utils.rst
sphinx/tables/: modules.rst
utils/: __init__.py  airflow_utils.py  api_utils.py  cache.py  celery_config.py  celery_utils.py  connector_utils.py  database_utils.py  enums.py  form_utils.py  generic_utils.py  jdbc_engine_utils.py  local_connection_utils.py  main_api_class.py  main_db_class.py  pipeline_utils.py  pyproject.toml  scheduler_utils.py  schema_utils.py  spark_utils.py  sqlalchemy_engine_utils.py  style_utils.py
utils/__migrations__/: app.py  scheduler.py
utils/airflow_templates/: full_load.py
utils/deprecated/: form_utils.py  generic_utils.py  jdbc_engine_utils.py
(+64 files in other folders)
