[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "openetl-utils"
version = "0.1.5"
description = "Simple ETL utilities used by OpenETL"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Rusab Khan", email = "rusabkhan7@gmail.com"},
{name = "Muhammad Ahmed", email = "mahmed743454@gmail.com"}]
urls = {homepage = "https://dataomnisolutions.com", repository = "https://github.com/RusabKhan/OpenETL", documentation = "https://rusabkhan.github.io/OpenETL/"}
keywords = ["etl", "data", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.12"

dependencies = [
  "alembic==1.14.0",
  "pandas==2.2.3",
  "numpy==2.1.3",
  "SQLAlchemy==2.0.36",
  "pyspark==3.5.3",
  "croniter==5.0.1",
  "regex==2024.11.6",
  "requests==2.32.3",
  "flatten-json==0.1.14"
]

[tool.poetry]
packages = [
  { include = "openetl_utils" }
]

exclude = [
  "openetl_utils/deprecated/*",
  "openetl_utils/scheduler_utils/*",
  "openetl_utils/celery_utils/*",
  ".mypy_cache/*",
  ".pytest_cache/*",
  "*.pyc",
  "*.pyo",
  "*.pyd"
]
