[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openetl-sdk"
version = "0.0.1"
description = "OpenETL backend lib with connectors."
readme = "README.md"
license = "MIT"
authors = [
    "Rusab Khan <rusabkhan7@gmail.com>",
    "Muhammad Ahmed <mahmed743454@gmail.com>"
]
homepage = "https://dataomnisolutions.com"
repository = "https://github.com/RusabKhan/OpenETL"
documentation = "https://rusabkhan.github.io/OpenETL/"
keywords = ["etl", "data", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# THIS IS THE KEY PART - Poetry will now respect this
packages = [
    { include = "openetl_utils"},
    { include = "connectors", to = "openetl_csdk" }
]

exclude = [
    "openetl_utils/deprecated",
    "openetl_utils/scheduler_utils.py",
    "openetl_utils/celery_utils.py",
    "openetl_utils/spark_utils.py",
    "openetl_utils/database_utils.py",
    "openetl_utils/pipeline_utils.py",
    "openetl_utils/__migrations__",
    "openetl_utils/__pycache__",
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.pytest_cache",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.pyd"
]

[tool.poetry.dependencies]
python = ">=3.12"
alembic = "1.14.0"
pandas = "2.2.3"
numpy = "2.1.3"
SQLAlchemy = "2.0.36"
croniter = "5.0.1"
regex = "2024.11.6"
requests = "2.32.3"
flatten-json = "0.1.14"
cryptography = "43.0.3"