[project]
name = "openetl-utils"
version = "0.1.0"
description = "Simple ETL utilities used by OpenETL"
authors = [
  { name = "Rusab Khan", email = "rusabkhan7@gmail.com" }
]
requires-python = ">=3.13"


[tool.poetry.dependencies]
python = ">=3.13"
pandas = "2.2.3"
numpy = "2.1.3"
SQLAlchemy = "2.0.36"
pyspark = "3.5.3"
croniter = "5.0.1"
regex = "2024.11.6"
requests = "2.32.3"
flatten-json = "0.1.14"

[tool.poetry]
exclude = [
    "**/deprecated/**",
    "**/.mypy_cache/**",
    "**/.pytest_cache/**",

    "**/*.pyc",
    "**/*.pyo",
    "**/*.pyd",

    "**/scheduler_utils*",
    "**/celery_utils*",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "utils"
from = "."
